--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "composite": true
+    "composite": true,
+    "incremental": false
   },
   "include": ["package.json", "src/**/*.ts"],
   "exclude": ["node_modules"]
