--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
   "type": "module",
   "exports": {
     ".": {
-      "default": "./build/index.cjs",
-      "import": "./build/index.cjs",
-      "types": "./dist/src/index.d.ts",
-      "require": "./build/index.cjs"
-    },
-    "./package.json": "./package.json"
+      "default": "./build/esm/index.mjs",
+      "require": "./build/cjs/index.cjs",
+      "import": "./build/esm/index.mjs",
+      "types": "./build/esm/index.d.ts"
+    }
   },
   "repository": {
     "url": "https://github.com/fairyscript/farm-plugin-tspaths",
@@ -27,10 +26,11 @@
     "email": "h@queb.fun"
   },
   "scripts": {
-    "build": "rimraf dist && farm build && tsc -p ./tsconfig.build.json",
-    "start": "pnpm run build -w",
-    "prepublishOnly": "npm run build",
-    "type-check": "tsc -p ./tsconfig.build.json --noEmit"
+    "build:cjs": "cross-env FARM_FORMAT=cjs farm build",
+    "build": "farm build && npm run build:cjs",
+    "start": "farm watch",
+    "dev": "farm watch",
+    "prepublishOnly": "npm run build"
   },
   "files": [
     "build",
@@ -41,7 +41,9 @@
   "devDependencies": {
     "@farmfe/cli": "^1.0.0",
     "@farmfe/core": "^1.0.9",
+    "@farmfe/js-plugin-dts": "^0.4.0",
     "@types/node": "^20.11.30",
+    "cross-env": "^7.0.3",
     "jsonc-parser": "^3.2.1",
     "rimraf": "^5.0.5",
     "type-fest": "^4.14.0",
