--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.1",
   "description": "Support for TypeScript's path mapping in Farm",
   "main": "./build/index.cjs",
-  "types": "./dist/src/index.d.ts",
+  "types": "./build/esm/index.d.ts",
   "type": "module",
   "exports": {
     ".": {
